# zalpha-api

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  setup.py
0.2.0/cpp/: _formulas.tex  classzalpha__api_1_1Packet-members.html  classzalpha__api_1_1Zalpha.html  classzalpha__api_1_1ZalphaImpl-members.html  dir_000002_000000.html  dir_74bce869607daadfe4b45bfa13a32bb7.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  functions_enum.html  functions_vars.html  graph_legend.html  index.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  packet_8hpp_source.html  zalpha_8hpp.html  zalpha_8hpp_source.html
0.3.0/cpp/: annotated.html  classes.html  classzalpha__api_1_1Packet-members.html  classzalpha__api_1_1Packet.html  classzalpha__api_1_1Zalpha-members.html  classzalpha__api_1_1Zalpha.html  classzalpha__api_1_1ZalphaImpl-members.html  classzalpha__api_1_1ZalphaImpl.html  dir_3808e3f8fe545b07b1d2715928fb0eea.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_74bce869607daadfe4b45bfa13a32bb7.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  formula.repository  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespacezalpha__api.html  packet_8hpp_source.html  zalpha_8hpp.html  zalpha_8hpp_source.html  zalpha__impl_8hpp_source.html
cmake/: CPackConfig.cmake
cpp/: annotated.html  classes.html  classzalpha__api_1_1Packet.html  classzalpha__api_1_1Zalpha-members.html  classzalpha__api_1_1ZalphaImpl.html  dir_3808e3f8fe545b07b1d2715928fb0eea.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  formula.repository  functions_eval.html  functions_func.html  namespacemembers_func.html  namespacezalpha__api.html  zalpha_8hpp__incl.dot  zalpha_8hpp__incl.md5  zalpha__impl_8hpp_source.html
doc/: CMakeLists.txt  Doxyfile.in  index.md
examples/: CMakeLists.txt  communication_test.cpp  demo_client.cpp
python/: CMakeLists.txt  setup.py.in
src/: zalpha.cpp
(+50 files in other folders)
